# python-ai-course

./: .gitignore  =3.5.0  Dijkstra_search_document.tex  README.md  RadixSort.java  ai_feature_guidelines.md  app_with_es.py  chat-ai-app.json  dijkstra_search.py  keywords.txt  project_create_tests.py  quicksort_animation_random.py  radix_sort.py  radix_sort_animation_random.py  requirements.txt
ai-development-project/: README.md  ai_feature_guidelines.md  demo.py  requirements.txt
ai-flight-tracker/: .env.example  Dockerfile  README.md  app.py  config.py  docker-compose.yml  flight_tracker.py  readme.md  requirements.txt  routes.json
ai-gateway/: Dockerfile  README.md  ai_edge.py  ai_gateway.py  cloud_client.py  copilot_client.py  docker-compose.yml  local_client.py  requirements.txt  router.py
ai-gen/: prayers_ramadan_2025.md  ramadan_2025.md
ai-py-java-srping/: README.md
ai-sync-async-fix-itch/: README.md
algorithms-and-data-structures/: README.md
camel-ai-data-pipeline/: README.md
design-patterns-project/: README.md
env-engr-ai/: README.md  (+3 more)
projects/langchain-langgraph-standalone/: LICENSE  README.md  pyproject.toml
projects/langchain-langgraph-standalone/.github/workflows/: ci.yml
projects/langchain-langgraph-standalone/configs/: config_variants.yaml
projects/langchain-langgraph-standalone/docs/: USAGE.md
projects/langchain-langgraph-standalone/examples/: sample.txt
projects/langchain-langgraph-standalone/src/langchain_langgraph/: __init__.py  integrations.py  pipeline.py
projects/langchain-langgraph-standalone/tests/: test_pipeline.py
(+536 files in other folders)
