[tool.poetry]
name = "langchain-langgraph-standalone"
version = "0.1.0"
description = "Standalone example pipeline integrating LangChain and LangGraph with configurable AI variants."
authors = ["smaruf <noreply@example.com>"]
license = "MIT"
packages = [{include = "langchain_langgraph", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
pydantic = "^1.10"
numpy = "^1.25"
scikit-learn = "^1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
